Fix print on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,6 @@
     }
 
     .covid-cert-container {
-        width: 100vw;
-        height: 100vh;
         margin: 0px;
         border: 0px;
         background-color: #FFF;
